// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders exchange 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#B4B9BD",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noExchangeActivity
     
  </Text>
</View>
`;

exports[`renders home 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#B4B9BD",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;

exports[`renders loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    color="#42D689"
    size="large"
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
    testID="NoActivity/loading"
  />
  <Text
    style={
      Object {
        "color": "#B4B9BD",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 24,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;
